@@ -47,10 +47,10 @@ import java.util.regex.Pattern;
       String group = hrefMatcher.group();
       Matcher quotMatcher = quotPattern.matcher(group);
       if (quotMatcher.find()) {
-        String matchedUrl = StringEscapeUtils.unescapeHtml4(quotMatcher.group());
-        String extractedUrl = matchedUrl.replaceAll("^.|.$", "").replaceAll("\\{", "%7B").replaceAll("\\}", "%7D");
+        String extractedUrl = quotMatcher.group().replaceAll("^.|.$", "").replaceAll("\\{", "%7B").replaceAll("\\}", "%7D");
         try {
-          URL url = new URL(root,extractedUrl);
+          extractedUrl =  StringEscapeUtils.unescapeHtml4(extractedUrl);
+          URL url = new URL(root,extractedUrl); //root.toURI().resolve(extractedUrl).toURL();
           if (url.toExternalForm().startsWith(root.toExternalForm()) && url.toExternalForm().length() > root.toExternalForm().length()) {
             list.add(url);
           }
